# cubebot-project

kys/: CMakeLists.txt  hello_world.c
kys/.ccls-cache/@@home@junnaaa@project@kys/: @home@junnaaa@.pico-sdk@sdk@2.1.1@src@boards@include@boards@pico.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@boot_picobin_headers@include@boot@picobin.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@boot_picoboot_headers@include@boot@picoboot.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@boot_picoboot_headers@include@boot@picoboot_constants.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@hardware_claim@claim.c.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@hardware_claim@include@hardware@claim.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_base_headers@include@pico.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_base_headers@include@pico@assert.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_base_headers@include@pico@config.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_base_headers@include@pico@error.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_base_headers@include@pico@types.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_binary_info@include@pico@binary_info.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_binary_info@include@pico@binary_info@code.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_binary_info@include@pico@binary_info@defs.h.blob  @home@junnaaa@.pico-sdk@sdk@2.1.1@src@common@pico_binary_info@include@pico@binary_info@structure.h.blob  (+176 more)
pico-test/: Cargo.toml  (+1 more)
(+16 files in other folders)
